syntax = "proto3";

package cluster;

option go_package = "eddisonso.com/edd-cloud/proto/cluster";

import "common/types.proto";

message ClusterMetrics {
  common.EventMetadata metadata = 1;
  repeated NodeMetrics nodes = 2;
}

message NodeMetrics {
  string name = 1;
  double cpu_percent = 2;
  double memory_percent = 3;
  double disk_percent = 4;
  repeated NodeCondition conditions = 5;
}

message NodeCondition {
  string type = 1;
  string status = 2;
}

message PodStatusSnapshot {
  common.EventMetadata metadata = 1;
  repeated PodStatus pods = 2;
}

message PodStatus {
  string name = 1;
  string namespace = 2;
  int32 restart_count = 3;
  bool oom_killed = 4;
}
